fix bugs make minor speedup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(sim_joint_data_set)
 export(sim_marker)
 export(surv_func_joint)
 importFrom(Rcpp,evalCpp)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,uniroot)
 useDynLib(SimSurvNMarker, .registration = TRUE)
