--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ LazyData: true
 Suggests: 
     testthat (>= 2.1.0),
     splines,
-    R.rsp
+    R.rsp, 
+    Matrix
 RoxygenNote: 7.1.1
 LinkingTo: 
     Rcpp,
